Update para correção de caminho nas imagens

--- a/ex-1-refatorar/index.html
+++ b/ex-1-refatorar/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <img class="logo" src="/img/bikcraft.svg" alt="bikecraft">
+    <img class="logo" src="./img/bikcraft.svg" alt="bikecraft">
     <nav aria-label="primária" class="nav">
       <ul>
         <li><a href="#">Sobre</a></li>
@@ -31,24 +31,24 @@
       <a href="#" class="botao">Ver Mais</a>
     </article>
 
-    <img src="/img/bicicleta.jpg" alt="">
+    <img src="./img/bicicleta.jpg" alt="">
 
     <h2 class="subtitulo">Vantagens Bikcraft</h2>
 
 
     <section aria-label="Super Vantagens Bikcraft" class="vantagens">
       <article aria-labelledby="motor" class="vantagens-item">
-        <img src="/img/eletrica.svg" alt="">
+        <img src="./img/eletrica.svg" alt="">
         <h3 id="motor"> Motor Elétrico</h3>
         <p>Permite você viajar distâncias inimagináveis com a sua bike</p>
       </article>
       <article aria-labelledby="velocidade" class="vantagens-item">
-        <img src="/img/velocidade.svg" alt="">
+        <img src="./img/velocidade.svg" alt="">
         <h3 id="velocidade">40 km/h</h3>
         <p>A mais rápida bicicleta elétrica dispónível hoje no mercado.</p>
       </article>
       <article aria-labelledby="rastreador" class="vantagens-item">
-        <img src="/img/rastreador.svg" alt="">
+        <img src="./img/rastreador.svg" alt="">
         <h3 id="rastreador">Rastreador</h3>
         <p>Rastreador e sistema anti-furto para garantir o seu sossego</p>
       </article>
